--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            font-size: 1.5rem;
           }
           
           button[type="submit"]:hover {
