--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,7 @@
           }
           
           button[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: #367C41
           }
   
           
