--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,18 @@
         margin-top: -40px;
         margin-left: 120px;
     }
-    .text2 {
+    .text2{
         color: rgb(255, 255, 255);
         font-size: 40px;
         margin-left: -700px;
         margin-top: 60px;
     }
+
+    .box3 h2{
+      color: rgb(255, 255, 255);
+      font-size: 20px;
+      margin-top: -60px;
+  }
 
     .box3 {
         color: aqua;
@@ -361,7 +367,7 @@
           
           button[type="submit"] {
             padding: 10px 20px;
-            background-color: #4caf50;
+            background-color: #327137;
             color: #fff;
             border: none;
             border-radius: 4px;
